force-app/main/default/objects/Compensation__c/fields/Bonus_Pay_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Pay_Schedule__c</fullName>
    <formula>Text(Bonus_Plan__r.Payment_Frequency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bonus Pay Schedule</label>
    <type>Text</type>
</CustomField>