force-app/main/default/objects/Compensation__c/fields/Bonus_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Percentage__c</fullName>
    <formula>Bonus_Plan__r.Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bonus Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>