force-app/main/default/objects/Compensation__c/fields/Bonus_Plan__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bonus Plan</label>
    <referenceTo>Bonus_Plan__c</referenceTo>
    <relationshipLabel>Compensations</relationshipLabel>
    <relationshipName>Bonus_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>