force-app/main/default/objects/Compensation__c/fields/Monthly_Base_Salary__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Base_Salary__c</fullName>
    <label>Monthly Base Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>