force-app/main/default/objects/Compensation__c/fields/Tax_Percentage_on_Location__c.field-meta.xml
<CustomField>
    <fullName>Tax_Percentage_on_Location__c</fullName>
    <formula>Employee__r.Location__r.Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Percentage on Location</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>