force-app/main/default/objects/Compensation__c/recordTypes/Ops_Employee_Compensation.recordType-meta.xml
<RecordType>
    <fullName>Ops_Employee_Compensation</fullName>
    <active>true</active>
    <label>Ops Employee Compensation</label>
</RecordType>