force-app/main/default/objects/Compensation__c/recordTypes/Sales_Employee_Compensation.recordType-meta.xml
<RecordType>
    <fullName>Sales_Employee_Compensation</fullName>
    <active>true</active>
    <label>Sales Employee Compensation</label>
</RecordType>