force-app/main/default/objects/Compensation__c/validationRules/CompEndDateGreaterThanEmpEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>CompEndDateGreaterThanEmpEndDate</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c  &gt; Employee__r.Employee_End_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>Compensation End Date Should not be Greater than Employee’s End Date.</errorMessage>
</ValidationRule>