force-app/main/default/objects/Compensation__c/validationRules/CompStartDateGreaterThanEmpEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>CompStartDateGreaterThanEmpEndDate</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c &lt;  Employee__r.Employee_Start_Date__c</errorConditionFormula>
    <errorMessage>Compensation Start Date Can not be Less than Employee Start Date</errorMessage>
</ValidationRule>