force-app/main/default/objects/Compensation__c/validationRules/EmployeeIsTerminated.validationRule-meta.xml
<ValidationRule>
    <fullName>EmployeeIsTerminated</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(Employee__r.Employee_Type__c) == &#39;Terminated&#39; &amp;&amp;  ISNEW()</errorConditionFormula>
    <errorMessage>Compensation cannot be created when related employee is terminated.</errorMessage>
</ValidationRule>