force-app/main/default/objects/Compensation__c/validationRules/Payment_Date_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Date_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
        ISPICKVAL( Employee__r.Employee_Type__c ,&#39;Hourly Employee&#39;),
        ISBLANK( Payment_Date__c ) 
        )</errorConditionFormula>
    <errorDisplayField>Payment_Date__c</errorDisplayField>
    <errorMessage>Payment Date is required when Employee Type is Hourly Employee.</errorMessage>
</ValidationRule>