force-app/main/default/objects/Compensation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Monthly_Base_Salary__c</columns>
    <columns>Base_Pay_Schedule__c</columns>
    <columns>Bonus_Plan__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>